--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jquery-scrape",
-  "version": "0.0.1",
-  "description": "Use jQuery as your selection engine on the result of an HTTP/HTTPS request.",
+  "version": "0.0.0",
+  "description": "Use jQuery as your selection engine on the result of an HTTP request.",
   "main": "index.js",
   "scripts": {
     "test": "tape 'test/test.js'"
@@ -13,6 +13,8 @@
   "keywords": [
     "webscraping",
     "scraping",
+    "request",
+    "cheerio",
     "jquery"
   ],
   "author": {
